Updates icon svg graphics. Updates header/footer block regions.

--- a/web/themes/custom/commerce_2_demo/templates/pages/includes/site_footer.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/pages/includes/site_footer.html.twig
@@ -1,5 +1,5 @@
 {# Set the path for the footer logo icon. #}
-{% set site_logo_icon_url =  base_path ~ directory ~ '/gfx/logo-icon.png' %}
+{% set site_logo_icon_url =  base_path ~ directory ~ '/gfx/logo-icon.svg' %}
 
 <footer class="site-footer">
   <div class="container">
