--- a/web/themes/custom/commerce_2_demo/sass/custom/_general.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/_general.scss
@@ -24,51 +24,57 @@ body {
 h1 {
   margin-top: 30px;
   font-family: $f-primary;
-  font-size: 35px;
+  font-size: 50px;
+  font-weight: 300;
+  color: #333;
 
-  @media (min-width: $screen-sm-min) {
-    font-size: 60px;
+  @media (max-width: $screen-xs-max) {
+    font-size: 40px;
   }
 }
 h2 {
   margin-top: 30px;
   font-family: $f-primary;
   font-size: 28px;
+  font-weight: 700;
+  color: $c-primary;
 
-  @media (min-width: $screen-sm-min) {
-    font-size: 35px;
+  @media (max-width: $screen-xs-max) {
+    font-size: 24px;
   }
 }
 h3 {
   margin-top: 30px;
   font-family: $f-primary;
-  font-size: 25px;
+  font-size: 26px;
+  font-weight: 300;
+  color: $c-primary;
 
-  @media (min-width: $screen-sm-min) {
-    font-size: 30px;
+  @media (max-width: $screen-xs-max) {
+    font-size: 24px;
   }
 }
 h4 {
   margin-top: 25px;
-  font-family: $f-secondary;
-  font-size: 20px;
-
-  @media (min-width: $screen-sm-min) {
-    font-size: 24px;
-  }
+  font-family: $f-primary;
+  font-size: 16px;
+  font-weight: 600;
+  color: $c-primary;
+  text-transform: uppercase;
 }
 h5 {
   margin-top: 25px;
-  font-family: $f-secondary;
-  font-size: 18px;
-  text-transform: uppercase;
+  font-family: $f-primary;
+  font-size: 13px;
+  font-weight: 700;
+  color: #000;
 }
 h6 {
   margin-top: 25px;
-  font-family: $f-secondary;
-  font-size: 16px;
-  text-transform: uppercase;
-  font-weight: bold;
+  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+  font-size: 11px;
+  font-weight: normal;
+  color: #999;
 }
 
 /**
@@ -86,8 +92,8 @@ ol {
 }
 blockquote {
   padding: 0 20px;
-  border-left: 14px solid $c-primary;
-  font-family: $f-secondary;
+  border-left: 14px solid $c-accent-1;
+  font-family: $f-primary;
   font-style: italic;
 }
 
@@ -126,9 +132,10 @@ a {
  * Buttons
  */
 .btn {
-  font-family: $f-secondary;
-  font-size: 18px;
-  transition: color .2s ease-in-out, background-color .2s ease-in-out;
+  padding: 6px 20px;
+  font-family: $f-primary;
+  font-size: 16px;
+  transition: color .2s ease-in-out, background-color .2s ease-in-out, border-color .2s ease-in-out;
 }
 
 // Primary button.
@@ -169,7 +176,8 @@ a {
 .open > .btn-default.dropdown-toggle:focus,
 .open > .btn-default.dropdown-toggle.focus {
   background-color: $gray-lighter;
-  border-color: $gray-light;
+  border-color: $gray;
+  color: $c-primary;
 }
 
 // Link button.
@@ -186,6 +194,47 @@ a {
 .btn-lg,
 .btn-group-lg > .btn {
   font-size: 24px;
+}
+
+/**
+ * Tabs.
+ */
+.nav-tabs {
+  border-bottom: 1px solid #ccc;
+
+  & > li {
+    margin-bottom: -1px;
+    margin-right: 10px;
+
+    & > a {
+      padding: 12px 30px 10px;
+      border: 1px solid #ccc;
+      border-bottom: 1px solid #ccc;
+      font-weight: 600;
+      text-transform: uppercase;
+      transition: color .2s ease-in-out, background-color .2s ease-in-out, border-color .2s ease-in-out;
+
+      &:hover, &:focus {
+        border: 1px solid #ccc;
+        border-bottom: 1px solid #ccc;
+        background-color: $gray-light !important;
+      }
+    }
+
+    &.active {
+      > a {
+        border: 1px solid #ccc;
+        border-bottom: 1px solid #fff;
+        color: $c-primary;
+
+        &:hover, &:focus {
+          border: 1px solid #ccc;
+          border-bottom: 1px solid #fff;
+          color: $c-primary;
+        }
+      }
+    }
+  }
 }
 
 /**
