--- a/web/themes/custom/commerce_2_demo/templates/pages/html.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/pages/html.html.twig
@@ -42,6 +42,8 @@
     <title>{{ head_title|safe_join(' | ') }}</title>
     <css-placeholder token="{{ placeholder_token|raw }}">
     <js-placeholder token="{{ placeholder_token|raw }}">
+    {# Google Fonts #}
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300i|Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto+Slab:700|Calligraffitti" rel="stylesheet">
     {# Favicon#}
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
