Completes header and footer styles, including mobile. Styles mobile search and primary menu.

--- a/web/themes/custom/commerce_2_demo/sass/custom/_content.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/_content.scss
@@ -81,8 +81,8 @@
 }
 .form-control,
 .form-textarea-wrapper textarea {
-  max-width: 100%;
-  width: 350px;
+  max-width: 350px;
+  width: 100%;
 }
 .radio,
 .checkbox {
