--- a/web/themes/custom/commerce_2_demo/sass/custom/_navigation.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/_navigation.scss
@@ -102,6 +102,10 @@ ul.menu--social-media {
   // To offset margin of li a below.
   margin: 0 -5px;
 
+  @media (max-width: $screen-xs-max) {
+    text-align: center;
+  }
+
   li a {
     position: relative;
     width: 28px;
@@ -157,7 +161,7 @@ ul.menu--social-media {
 .mobile-control-nav {
   float: right;
   margin: 0;
-  padding: 64px 0 0 0;
+  padding: 50px 0 0 0;
   text-align: right;
 
   .menu {
@@ -185,10 +189,10 @@ ul.menu--social-media {
     display: inline-block;
     margin: 0;
     padding: 0;
-    font-family: $f-secondary;
+    font-family: $f-primary;
     font-size: 26px;
     line-height: 26px;
-    color: #fff;
+    color: #000;
     text-decoration: none;
     vertical-align: top;
 
@@ -208,7 +212,7 @@ ul.menu--social-media {
   display: none;
   height: 100%;
   width: 100%;
-  @include background-opacity(#fff, 1);
+  @include background-opacity(#fff, 0.95);
   z-index: 9999;
   overflow-x: hidden;
 }
@@ -217,8 +221,8 @@ ul.menu--social-media {
 .mobile-search-overlay__content {
   margin: 0;
   padding: 66px 15px 0 15px;
-  height: 120px;
-  background: $gray-darker;
+  height: 130px;
+  background: #000;
 }
 .mobile-search-overlay__close {
   position: absolute;
@@ -229,7 +233,7 @@ ul.menu--social-media {
   padding: 10px 15px 0 15px;
   font-size: 28px;
   line-height: 28px;
-  color: #818181;
+  color: #666;
   text-decoration: none;
   vertical-align: top;
   outline: none;
@@ -237,7 +241,7 @@ ul.menu--social-media {
 
   &:hover,
   &:focus {
-    color: darken(#818181, 10%);
+    color: darken(#666, 10%);
     text-decoration: none;
   }
   span {
@@ -248,10 +252,23 @@ ul.menu--social-media {
   position: relative;
   margin: 0;
   padding: 0 34px 5px 0;
-  border-bottom: 2px solid #818181;
+  border-bottom: 2px solid $c-primary;
 
   .block-search .form-search-submit-trigger {
     display: none;
+  }
+  .form-item{
+    width: 100%;
+
+    .form-control {
+      max-width: 100%;
+      background: transparent;
+      border: none;
+      outline: none;
+      box-shadow: none;
+      font-size: 20px;
+      color: #fff;
+    }
   }
   .form-item,
   .form-actions {
@@ -310,7 +327,7 @@ ul.menu--social-media {
 
 // Mobile navigation overlay.
 .mobile-nav-overlay {
-
+  @include background-opacity(#fff, 1);
 }
 .mobile-nav-overlay__content {
   position: relative;
@@ -359,6 +376,9 @@ ul.menu--social-media {
 // Mobile navigation.
 .mobile-nav {
 
+  h2 {
+    padding-left: 15px;
+  }
   .menu {
     clear: both;
     display: block;
@@ -375,6 +395,7 @@ ul.menu--social-media {
       line-height: 1.3;
     }
   }
+  .view-facet-menus .views-row,
   .menu__item {
     clear: both;
     float: none;
@@ -386,6 +407,7 @@ ul.menu--social-media {
   .menu--level-1 .menu__item:last-child {
     border-bottom: none;
   }
+  .view-facet-menus a,
   .menu__link {
     position: relative;
     display: block;
@@ -393,6 +415,7 @@ ul.menu--social-media {
     padding: 9px 15px;
     font-family: $f-primary;
     font-size: 18px;
+    font-weight: 300;
     line-height: 1.3;
     color: $c-body;
     text-decoration: none;
